Add Scan2 project to index.html

--- a/index.html
+++ b/index.html
@@ -158,6 +158,36 @@
         </footer>
       </article>
 
+      <article class="project-card" data-category="utility" data-status="beta" data-theme="utility-2">
+        <div class="project-icon" role="img" aria-label="实用工具">⚙️</div>
+        <header class="project-header">
+          <h2 class="project-title">
+            <a href="https://ttieli.github.io/Scan2/" class="project-link">Scan2: Advanced Document Scanner</a>
+          </h2>
+        </header>
+        <p class="project-description" lang="zh-CN">增强型文档扫描应用 - 提供更强大的图像处理和文档管理功能</p>
+        <div class="project-technologies" aria-label="使用技术">
+          <span class="tech-tag">JavaScript</span>
+          <span class="tech-tag">HTML5</span>
+          <span class="tech-tag">CSS3</span>
+        </div>
+        <ul class="project-features" aria-label="主要功能" lang="zh-CN">
+          <li>多页文档处理</li>
+          <li>OCR文字识别</li>
+          <li>云端同步选项</li>
+        </ul>
+        <footer class="project-meta">
+          <span class="category-badge" data-category="utility" lang="zh-CN">
+            <span class="visually-hidden">类别:</span>
+            实用工具
+          </span>
+          <span class="status-badge" data-status="beta" role="status" lang="zh-CN">
+            <span class="badge-icon" aria-hidden="true">⚡</span>
+            <span class="badge-text">测试中</span>
+          </span>
+        </footer>
+      </article>
+
       <article class="project-card" data-category="utility" data-status="active" data-theme="science">
         <div class="project-icon" role="img" aria-label="计算工具">🌡️</div>
         <header class="project-header">
